"Ignore keyboard volume buttons" not working
Before the VLC 2.1.0 rc 1 the keyboard volume buttons changed my system sound, now they change the VLC sound levels.
It looks like the "Ignore keyboard volume buttons" isnt working.
Before the VLC 2.1.0 rc 1 the keyboard volume buttons changed my system sound, now they change the VLC sound levels.
It looks like the "Ignore keyboard volume buttons" isnt working.
assigned to @jbk
added Component::Interface: other plugins label
added Status::fixed label
closed
commit 8c6c1e78 Author: Jean-Baptiste Kempf jb@videolan.org Date: Mon Sep 16 17:33:09 2013 +0200
Win32: do not map Volume keys by default
On Windows, it seems people expect volume keys to control the master
volume...
I'm not going to fight this fight with our users during support...
Ref [#9373](https://code.videolan.org/videolan/vlc/-/issues/9373)
Original author: jb@videolan.org
VideoLAN code repository instance