Win32: do not map Volume keys by default

On Windows, it seems people expect volume keys to control the master
volume...
I'm not going to fight this fight with our users during support...

Ref #9373